# commonroad-io

./: .bazelrc  .editorconfig  .flake8  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  README.rst  README_develop.rst  Untitled.ipynb  WORKSPACE  batch_processing.py  batch_processing_config.yaml  gitlab-ci.yml  myName.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-app.yml
NumericalExperiments/: DEU_Flensburg-6_1_T-1.xml  DEU_Muc-28_1_T-1.xml  USA_Peach-4_2_T-1.xml  solution_PM1:OD1:DEU_Flensburg-6_1_T-1:2020a.xml  solution_PM2:JB1:DEU_Flensburg-6_1_T-1:2020a.xml  solution_PM2:JB1:DEU_Flensburg-71_1_T-1:2020a.xml  solution_PM2:JB1:DEU_Guetersloh-39_2_T-1:2020a.xml  solution_PM2:JB1:USA_Peach-4_2_T-1:2018b.xml  solution_PM2:OD1:DEU_Flensburg-6_1_T-1:2020a.xml  solution_PM2:OD1:DEU_Muc-28_1_T-1:2018b.xml  solution_PM2:OD1:USA_Peach-4_2_T-1:2018b.xml  solution_PM3:OD1:DEU_Flensburg-6_1_T-1:2020a.xml  testMain.py
Testing/: DEU_Flensburg-6_1_T-1-lab.ipynb  DEU_Flensburg-6_1_T-1.xml  RoutePlanerTestMain.py  TestLine.py  Untitled.ipynb  Untitled10.ipynb  Untitled12.ipynb  Untitled13.ipynb  Untitled14.ipynb  Untitled2.ipynb  Untitled7.ipynb  Untitled9.ipynb  fourthScenario.xml  refPath.txt  sixthScenario.xml  sixthScenarioSolution.xml  solutionScenario.xml  solution_PM2:JB1:DEU_Flensburg-6_1_T-1:2020a.xml  testMain.py  testScenario.xml  trajectory.txt
actions/setup-ffmpeg/: action.yaml
batch_processing/configuration/: batch_processing_config.yaml
batch_processing/scenarios/: RUS_Bicycle-1_1_T-1.xml  RUS_Bicycle-1_2_T-1.xml  RUS_Bicycle-2_1_T-1.xml  RUS_Bicycle-2_2_T-1.xml  RUS_Bicycle-3_1_T-1.xml  RUS_Bicycle-3_2_T-1.xml  RUS_Bicycle-3_3_T-1.xml  RUS_Bicycle-4_2_T-1.xml  RUS_Bicycle-5_1_T-1.xml
batch_processing/script/: batch_processing.py  helper_functions.py
commonroad/: BUILD  __init__.py  style_guide.rst
commonroad/common/: Untitled.ipynb  XML_commonRoad_XSD.xsd  common_lanelet.py  common_scenario.py  commonroad_validity.xsd  file_reader.py  file_reader_roadnet.py  file_writer.py  lanelet_checker.py  solution.py  solution_writer.py  util.py  validity.py
commonroad/doc/: Makefile  requirements_doc.txt
commonroad/geometry/: polyline_util.py  shape.py  transform.py
commonroad/planning/: extended_planning_problem.py  goal.py  planner_interface.py  planning_problem.py
commonroad/prediction/: ground_truth_predictor.py  prediction.py  prediction_interface.py  spot_prediction.py
commonroad/proto_definition_files/: commonroad.proto  dynamic_obstacle.proto  environment_obstacle.proto  general.proto  intersection.proto  lanelet.proto  location.proto  obstacle.proto  planning_problem.proto  scenario_tags.proto  static_obstacle.proto  traffic_light.proto  traffic_sign.proto  util.proto
commonroad/protobuf_format/: convert_xml_to_pb.py
commonroad/scenario/: area.py  building.py  intersection.py  lanelet.py  obstacle.py  scenario.py  state.py  traffic_light.py  traffic_rule.py  traffic_sign.py  traffic_sign_interpreter.py  trajectory.py
commonroad/tests/: run_tests.py  util.py
commonroad/trial/: USA_Lanker-1_1_T-1-OBs.xml  ZAM-1_2_T-1-Road.xml  scenario_filewriter.ipynb
commonroad/tutorials/: BEL_Beringen-3_5_I-1-1.cr.xml  CTA_Obstacles.json  DEU_Gar-2_1_T-1.xml  Traffic_sign.py  USA_Lanker-1_1_T-1_obstaclesPlanning  USA_Lanker-1_1_T-1_roadNetwork  USA_Lanker-1_3_T-1.xml  ZAM_Loading_Bay-1_1_T-1.xml  ZAM_Tutorial-1_1_T-1.xml  ZAM_Tutorial-1_2_T-1.xml  ZAM_Tutorial_truck-1_2_T-1.xml  ZAM_Tutorial_truck-1_2_T-2.xml  ZAM_Tutorial_truck-1_2_T-3.xml  ZAM_Urban-4_1_S-1.xml  ZAM_Urban-5_1_S-1.xml  bike.py  bridge.py  car.py  code_example.py  drone.py  filename.xml  fonction.py  getting_started.ipynb  kst.py  (+17 more)
commonroad_route_planner/: route.py  route_planner.py
doc/: README.txt  requirements_doc.txt
tests/: run_tests.py  test_utils.py
tools/: BUILD  repositories.bzl
trial/: Intersection.ipynb  USA_Lanker-1_1_T-1.xml  USA_Lanker-1_1_T-1_obstaclesPlanning.xml  USA_Peach-4_8_T-1.xml  USA_Peach-4_8_T-1_roadNetwork.xml  ZAM_Tutorial-1_1_T-1.xml  ZAM_Tutorial-1_1_T-1_roadNetwork.xml  ZAM_Tutorial-1_2_T-1.xml  scenario_filewriter.ipynb  scenario_filewriter_0.ipynb  separate_obs_and_road.ipynb  test_reading_intersection_traffic_sign.xml
tutorials/: 04M001.json  USA_Lanker-1_1_T-1  USA_Lanker-1_1_T-1.xml  USA_Lanker-1_1_T-1_obstaclesPlanning.xml  USA_Lanker-1_1_T-1_roadNetwork.xml  Untitled1.ipynb  ZAM_Loading_Bay-1_1_T.xml  ZAM_Tutorial-1_1_T-1  ZAM_Tutorial-1_1_T-1_roadNetwork  ZAM_Tutorial-1_2_T-1.xml  ZAM_ahhh-1_1_T-1.xml  ZAM_finalscenariobridge-1_1_T-1.xml  ZAM_testmanylayers-1_1_T-1.xml  car_time.py  code_example.py  commonroad-io-code-example.md  filename.xml  getting_started.ipynb  graphe.py  lanelet.py  obstacles.py  optimization.ipynb  optimization_solution.ipynb  read_write_protobuf_files.ipynb  scenario.ipynb  scenario_solution.ipynb  scenario_truck.ipynb  solution_PM3:SM3:ZAM_Tutorial-1_2_T-1:2020a.xml  trajectory.npy  write_trajectory.py  zorder_visualization.py
(+609 files in other folders)
