[tool.poetry]
name = "commonroad-io"
version = "2023.2"
description = "Python tool to read, write, and visualize CommonRoad scenarios and solutions for automated vehicles."
authors = ["Cyber-Physical Systems Group, Technical University of Munich <commonroad@lists.lrz.de>"]
license = "BSD"
readme = "README.md"
homepage = "https://commonroad.in.tum.de"
keywords= ["autonomous", "automated", "vehicles", "driving", "motion", "planning"]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows"
]
packages = [{ include = "commonroad" }]

[tool.poetry.urls]
Documentation = "https://commonroad.in.tum.de/static/docs/commonroad-io/index.html"
Forum = "https://commonroad.in.tum.de/forum/c/commonroad-io"
Source = "https://gitlab.lrz.de/tum-cps/commonroad_io"

[tool.poetry.dependencies]
python = "^3.8"
numpy = [
    {version = ">=1.22", python = ">=3.8,<3.11"},
    {version = "^1.24", python = ">=3.11"}
]
scipy = [
    {version = ">=1.5.2", python = "<3.11"},
    {version = "^1.9", python = ">=3.11"}
]
shapely = "^2.0.1"
matplotlib = ">=3.0.0"
lxml = ">=4.2.2"
networkx = ">=2.2"
Pillow = ">=7.0.0"
iso3166 = ">=1.0.1"
commonroad-vehicle-models = ">=2.0.0"
rtree = ">=0.8.3"
protobuf = "==3.20.1"
omegaconf = ">=2.0"
tqdm = ">=4.64"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = ">=1.3.6"
graphviz = ">=0.3"
sphinx-autodoc-typehints = ">=1.3.0"
sphinx_rtd_theme = ">=0.4.1"
sphinx-gallery = ">=0.2.0"
ipython = ">=6.5.0"


[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
lxml = ">=4.2.5"
pytest = ">=3.8.0"
coverage = "^7.1.0"
nbval = "^0.10.0"

[tool.poetry.group.tutorials]
optional = true

[tool.poetry.group.tutorials.dependencies]
cvxpy = ">=0.4.9"
jupyter = ">=1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
