[tool.poetry]
name = "commonroad-io"
version = "2024.3"
description = "Python tool to read, write, and visualize CommonRoad scenarios and solutions for automated vehicles."
authors = ["Cyber-Physical Systems Group, Technical University of Munich <commonroad@lists.lrz.de>"]
license = "BSD"
readme = "README.md"
homepage = "https://commonroad.in.tum.de"
keywords = ["autonomous", "automated", "vehicles", "driving", "motion", "planning"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows"
]
packages = [{ include = "commonroad" }]

[tool.poetry.urls]
Documentation = "https://cps.pages.gitlab.lrz.de/commonroad/commonroad-io/"
Forum = "https://github.com/orgs/CommonRoad/discussions"
Source = "https://github.com/CommonRoad/commonroad-io"

[tool.poetry.dependencies]
python = "^3.9"
numpy = [
    {version = ">=1.26.1", python = "<3.13"},
    {version = ">=2.1.0", python = ">=3.13"}
]
scipy = [
    {version = ">=1.11.3", python = "<3.13"},
    {version = ">=1.13.0", python = ">=3.13"}
]
shapely = "^2.0.1"
matplotlib = ">=3.0.0"
lxml = ">=4.2.2"
networkx = ">=2.2"
pillow = ">=10.4.0"
iso3166 = ">=1.0.1"
commonroad-vehicle-models = ">=2.0.0"
rtree = ">=0.8.3"
protobuf = "==3.20.2"
omegaconf = ">=2.0"
tqdm = ">=4.64"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = ">=1.3.6"
graphviz = ">=0.3"
sphinx-autodoc-typehints = ">=1.3.0"
sphinx_rtd_theme = ">=0.4.1"
sphinx-gallery = ">=0.2.0"
ipython = ">=6.5.0"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.13.1"
flake8 = [
    { version = "^5.0.4", python = ">=3.8,<3.8.1" },
    { version = "^6.1.0", python = ">=3.8.1" }
]

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
lxml = ">=4.2.5"
pytest = ">=3.8.0"
coverage = "^7.1.0"
nbval = "^0.10.0"

[tool.poetry.group.tutorials]
optional = true

[tool.poetry.group.tutorials.dependencies]
cvxpy = ">=0.4.9"
jupyter = ">=1.0.0"
jupyterlab = ">=4.0.11"  # https://github.com/CommonRoad/commonroad-io/security/dependabot/22
jupyter-lsp = ">=2.2.2" # https://github.com/CommonRoad/commonroad-io/security/dependabot/18

[tool.black]
extend-exclude = "(traffic_signs/)|(generated_scripts/)"
line-length = 120

[tool.isort]
profile = "black"
extend_skip = ["traffic_signs", "generated_scripts"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
